--- a/style/style.css
+++ b/style/style.css
@@ -6,12 +6,14 @@ body {
     flex-direction: column;
 }
 
+/* Header Style */
+
 .headwrapper {
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: #1F2937;
-    
+
 }
 
 
@@ -37,7 +39,8 @@ body {
     color: #F9FAF8;
 }
 
-.head p,a {
+.head p,
+a {
     font-size: 18px;
     color: #F9FAF8;
     font-weight: lighter;
@@ -61,7 +64,7 @@ button {
     padding: 10px 30px;
     border-radius: 5px;
     border: none;
-    font-weight: bold;    
+    font-weight: bold;
 }
 
 .head img {
@@ -75,6 +78,39 @@ button {
     gap: 10%;
 }
 
-.logo, .main {
+.logo,
+.main {
     padding-bottom: 100px;
+}
+
+/* Content Style */
+
+.content {
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.info img {
+    width: 200px;
+    height: 200px;
+    margin-bottom: 15px;
+    border-radius: 10px;
+    border: 5px solid #3882F6;
+}
+
+.title {
+    font-size: 36px;
+    font-weight: bolder;
+    color: #1F2937;
+    margin: 50px;
+}
+
+.container {
+    display: flex;
+    justify-content: center;
+    gap: 60px;
+}
+
+.info {
+    max-width: 200px;
 }
