--- a/style/style.css
+++ b/style/style.css
@@ -144,6 +144,8 @@ button {
     color: #1F2937;
 }
 
+/* Action Style */
+
 .action {
     display: flex;
     justify-content: space-around;
@@ -161,5 +163,17 @@ h2 {
 
 .action button {
     border: 2px solid #F9FAF8;
+    font-size: large;
+}
+
+/* Footer Style */
+
+footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #1F2937;
+    color: #F9FAF8;
+    padding: 40px;
     font-size: large;
 }
